[gd_scene load_steps=15 format=3 uid="uid://dwu8hj41qgjuj"]

[ext_resource type="Texture2D" uid="uid://d0nc5fm0obfhi" path="res://assets/SpriteSheet.png" id="1_46voo"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_x4e8y"]
[ext_resource type="Resource" uid="uid://bywtxbdglvnpu" path="res://inventory/playerInventory.tres" id="2_77iln"]

[sub_resource type="Animation" id="Animation_bayjd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_8kdny"]
resource_name = "walkDown"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_yknct"]
resource_name = "walkLeft"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_7mm5u"]
resource_name = "walkRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_bhiuw"]
resource_name = "walkUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_328pk"]
_data = {
"RESET": SubResource("Animation_bayjd"),
"walkDown": SubResource("Animation_8kdny"),
"walkLeft": SubResource("Animation_yknct"),
"walkRight": SubResource("Animation_7mm5u"),
"walkUp": SubResource("Animation_bhiuw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0rtof"]
size = Vector2(12, 4)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pxa4p"]
radius = 6.0
height = 14.0

[sub_resource type="Animation" id="Animation_fknlx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.960784, 0.027451, 0, 0)]
}

[sub_resource type="Animation" id="Animation_k8gvd"]
resource_name = "hurtBlink"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.837486, 0, 0.168265, 0.501961), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r5kx1"]
_data = {
"RESET": SubResource("Animation_fknlx"),
"hurtBlink": SubResource("Animation_k8gvd")
}

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
position = Vector2(92, 63)
script = ExtResource("1_x4e8y")
inventory = ExtResource("2_77iln")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
position = Vector2(0, -3)
texture = ExtResource("1_46voo")
offset = Vector2(0, -8)
hframes = 4
vframes = 7

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -20.0
offset_top = -28.0
offset_right = 20.0
offset_bottom = 12.0
color = Color(0.960784, 0.027451, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_328pk")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_0rtof")

[node name="hurtbox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -10)
shape = SubResource("CapsuleShape2D_pxa4p")

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r5kx1")
}

[node name="hurtTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="hurtbox" to="." method="_on_hurtbox_area_exited"]
